--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.1",
     "rate-limiter-flexible": "^2.3.6",
+    "express-session": "^1.17.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
