--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.1.1",
     "rate-limiter-flexible": "^2.3.6",
     "express-session": "^1.17.2",
+    "session-file-store": "^1.5.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
